src/QCheckBox.h


// 
// This file has been automatically generated by RaQt_maker V0.0.6.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void * QWQCheckBoxCtor_1(void * parent);
EXTERNC void * SCWQCheckBoxCtor_1(void * parent);
EXTERNC void * QWQCheckBoxCtor_2(char * text, void * parent);
EXTERNC void * SCWQCheckBoxCtor_2(char * text, void * parent);
EXTERNC void QWQCheckBoxsetTristate(void * obj, int8_t  y);
EXTERNC int8_t QWQCheckBoxisTristate(void * obj);
EXTERNC int QWQCheckBoxcheckState(void * obj);
EXTERNC void QWQCheckBoxsetCheckState(void * obj, int  state);
EXTERNC void QWvalidateCB_QCheckBox(void *obj, int32_t objId, char *methodName);
EXTERNC void QWQCheckBoxDtor(void *);
EXTERNC void SCWQCheckBoxDtor(void *);